# tidal-mcp

./: .coverage  .deploy.yml.example  .dockerignore  .gitignore  Dockerfile  LOGIN_ANALYSIS.md  README.md  Taskfile.yml  app.py  claude.mcp.json  cursor.mcp.json  cursor_project_guide.md  docker-compose.yml  pyproject.toml  start_mcp.py  start_mcp_http.py
docs/: HTTP_DEBUG_SETUP.md  IMPROVEMENTS_SUMMARY.md  LOGIN_ANALYSIS.md  QUICK_START_HTTP.md
docs/fastmcp/: context.md  elicitation.md  http-deploy.md  icons.md  logging.md  middleware.md  progress.md  storage-backends.md  tools.md
mcp_server/: container.py  logger.py  server.py  utils.py  wireup_config.py
tests/: __init__.py  conftest.py
tests/unit/: test_auth_thread_safety.py  test_session_manager.py  test_session_storage.py  test_tidal_service.py
tidal_api/: app.py  browser_session.py  interfaces.py  logger.py  models.py  services.py  session_manager.py  session_storage.py  tidal_service.py  utils.py
