[project]
name = "tidal-mcp"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "certifi>=2024.0.0",
    "fastapi>=0.115.0",
    "mcp[cli]>=1.6.0",
    "requests>=2.32.3",
    "tidalapi>=0.8.8",
    "uvicorn>=0.32.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mcp_server", "tidal_api"]